--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: @todo, local:true do |f| %>
 <h1>Edita tu Tarea<h1>
 <h3><%= f.text_field :description %></h3>
-<p><%= f.button :Update %></p>
+<p><%= f.button :Update, class: 'btn btn-success' %></p>
 <% end %>
